5/8/26:

- Add transitional delay to cell hover
- Fix player specific hover not working on turn 1
- Add player specific hover color functionality for cells
- Fix player selecting occupied cell as counting as their turn
- Complete step 5
- Add alert for tie game
- Create init function to initialize game
- Add event listeners to form submit buttons
- Create functions to update turn and score displays with input usernames 
- Create initializePlayerNames function to take username inputs
- Organize various notes in pseudocode into step 6
- Set max width of container and center align

5/7/25:

- Consolidate alert and finished classes
- Add submit buttons to username inputs
- Fix newGame not removing gameAlert and finishedGame text
- Add flex formatting to css code
- Reformat html code for updated layout
- Add text inputs for player usernames
- Add step 6 to pseudocode
- Add new game button functionality
- Add new game button and styling
- Move winner notification to alert box
- Cells with value of 0 now show empty
- Update player markers to X and O emojis
- Increment winner's score by 1 when game ends
- Add tracker div to show player wins and losses
- Add padding to html elements for better readability 
- Add pseudocode notes of potential ideas
- Change order of elements in html file for better flow
- Adjust winner notification
- Create winner h1 class
- Complete step 5c
- Add text notification of winner
- Add check for if game board is full in event of a tie
- Fix "cell taken" alert continuing to show when valid cell is chosen
- Complete step 3, 4
- Fix click event to take user input and place marker
- Adjust displayController 
- Move Cell inside of Gameboard
- Make alerts and finished display when cell is taken and/or game is finished
- Add alerts and finished divs in html
- Add notes in pseudocode about textContent displays

5/6/25:

- Remove placeholder gif and text
- Center grid horizontally on page
- Start work on creating game display via DOM