@@ -77,6 +77,8 @@ Done
     Done
     6h. fix player selecting already taken cell still counting as their move
     Done
+    6i. decide on and apply palette
+    Done
 
 resources:
 https://www.ayweb.dev/blog/building-a-house-from-the-inside-out
